# web-flow-recorder

./: .gitignore  README.md  pyproject.toml
.agents/ralph/: agents.sh  config.sh  loop.sh
.agents/tasks/: prd-browser-workflows.json  prd-qa-signup-selenium.json
docs/: BUILD_PLAN.md  RALPH_PRD.md
src/web_flow_recorder/: __init__.py  config.py  data_factory.py  driver_factory.py  reporting.py  runner.py
src/web_flow_recorder/pages/: base_page.py  signup_page.py
tests/: test_config.py  test_reporting.py
