[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-flow-recorder"
version = "0.1.0"
description = "Selenium-based QA signup flow automation scaffold"
requires-python = ">=3.10"
dependencies = [
  "selenium>=4.21.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
